--- a/app/src/main/res/layout/content_view_history.xml
+++ b/app/src/main/res/layout/content_view_history.xml
@@ -32,136 +32,28 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="@dimen/l5dp"
-        >
-
-
-
-            <TextView
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="5dp"
-                android:gravity="center"
-                android:text="10:34PM"
-                android:textStyle="bold"
-                android:background="@drawable/circle_shape"
-                android:textColor="@color/black"
-                android:textSize="@dimen/tx14sp" />
-
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textStyle="bold"
-              android:layout_marginTop="5dp"
-                android:text="Seller accepted Broker's proposal for 500 units instead of 300 units"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="27th septmber,2016"
-                android:textColor="@color/black"
-                android:textSize="@dimen/tx14sp" />
-
-        </LinearLayout>
-
-
-
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="50dp"
-        android:layout_gravity="left"
-        android:layout_marginLeft="37dp"
-        android:background="@color/teal" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/l5dp"
-        >
-
-
-
-        <TextView
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:text="10:34PM"
-            android:textStyle="bold"
-            android:background="@drawable/circle_shape"
-            android:textColor="@color/black"
-            android:textSize="@dimen/tx14sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:textStyle="bold"
-                android:text="Seller accepted Broker's proposal for 500 units instead of 300 units"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="27th septmber,2016"
-                android:textColor="@color/black"
-                android:textSize="@dimen/tx14sp" />
-
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
-
+        </android.support.v7.widget.RecyclerView>
 
 
         <Button
+            android:id="@+id/btn_view_all"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="3dp"
-            android:layout_marginTop="3dp"
             android:layout_marginRight="3dp"
+            android:layout_marginTop="3dp"
             android:background="@color/white"
             android:padding="5dp"
-            android:textStyle="bold"
             android:text="@string/view_all_history"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
