--- a/app/src/main/res/layout/content_view_history.xml
+++ b/app/src/main/res/layout/content_view_history.xml
@@ -2,60 +2,51 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/activity_background_color"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.firstidea.android.brokerx.ViewHistoryActivity"
     tools:showIn="@layout/activity_view_history">
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/top_lable"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/teal"
+        android:gravity="center_vertical"
+        android:paddingLeft="25dp"
+        android:text="Recent Changes"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/top_lable">
+
+    </android.support.v7.widget.RecyclerView>
+
+
+    <!--<Button
+        android:id="@+id/btn_view_all"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            android:background="@color/teal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:padding="5dp"
-                android:text="Recent Changes"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v7.widget.RecyclerView>
-
-
-        <Button
-            android:id="@+id/btn_view_all"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginTop="3dp"
-            android:background="@color/white"
-            android:padding="5dp"
-            android:text="@string/view_all_history"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_below="@+id/recycler_view"
+        android:background="@color/white"
+        android:padding="5dp"
+        android:text="@string/view_all_history"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />-->
 
 
 </RelativeLayout>
