--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="teal">#13a697</color>
     <color name="main_color">#da3442</color>
     <color name="main_color_lite">#d28087</color>
+    <color name="pending_color">#B1CC03</color>
     <!--<color name="teal">#009688</color>-->
 
     <!-- Teal Color
