--- a/app/src/main/res/layout/row_document.xml
+++ b/app/src/main/res/layout/row_document.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@+id/icon_text"
+            android:layout_toLeftOf="@+id/layout_status"
             android:text="fileName.Pdf"
             android:textSize="14sp"
             android:textStyle="bold" />
@@ -41,13 +42,29 @@
             android:text="Dec 26, 2016"
             android:textSize="12sp" />
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+        <LinearLayout
+            android:id="@+id/layout_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_cloud_download" />
+            android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/download_status"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_cloud_download" />
+
+            <ImageView
+                android:id="@+id/download_status_completed"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/circle_tick"
+                android:visibility="gone"/>
+        </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
